# pass-lock

./: .gitignore  README.md  fernet_token.sh  pyproject.toml
src/pass_lock/: pass-lock.py
